--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "require": {
+        "php-di/php-di": "^5.4",
+        "monolog/monolog": "^1.22",
+        "psr/log": "^1.0"
     },
 		"autoload": {
 			"psr-4": {
