--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "php-di/php-di": "^5.4",
         "monolog/monolog": "^1.22",
-        "psr/log": "^1.0"
+        "psr/log": "^1.0",
+        "predis/predis": "^1.1"
     },
 		"autoload": {
 			"psr-4": {
