--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,23 @@
 {
-    "require": {
-        "php-di/php-di": "^5.4",
-        "monolog/monolog": "^1.22",
-        "psr/log": "^1.0",
-        "predis/predis": "^1.1",
-        "daverandom/libdns": "^1.1"
-    },
-		"autoload": {
-			"psr-4": {
-				"App\\Helper\\": "helpers",
-				"App\\Model\\": "models",
-				"App\\Controller\\": "controllers"
-			}
+	"require": {
+		"php-di/php-di": "^5.4",
+		"monolog/monolog": "^1.22",
+		"psr/log": "^1.0",
+		"predis/predis": "^1.1",
+		"daverandom/libdns": "^1.1",
+		"edruid/snake-druid": "^0.1.9"
+	},
+	"autoload": {
+		"psr-4": {
+			"App\\Helper\\": "helpers",
+			"App\\Model\\": "models",
+			"App\\Controller\\": "controllers"
 		}
+	},
+	"repositories": [
+		{
+			"type": "vcs",
+			"url": "https://github.com/p-blomberg/SnakeDruid"
+		}
+	]
 }
