--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,20 @@
 {
-    "require": {
-        "php-di/php-di": "^5.4",
-        "monolog/monolog": "^1.22",
-        "psr/log": "^1.0",
-        "predis/predis": "^1.1",
-        "daverandom/libdns": "^1.1"
-    },
-		"autoload": {
-			"psr-4": {
-				"App\\Helper\\": "helpers",
-				"App\\Model\\": "models",
-				"App\\Controller\\": "controllers"
-			}
+	"require": {
+		"php-di/php-di": "^5.4",
+		"monolog/monolog": "^1.22",
+		"psr/log": "^1.0",
+		"predis/predis": "^1.1",
+		"daverandom/libdns": "^1.1"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "^5.7",
+		"phpunit/phpunit-selenium": "^3.0"
+	},
+	"autoload": {
+		"psr-4": {
+			"App\\Helper\\": "helpers",
+			"App\\Model\\": "models",
+			"App\\Controller\\": "controllers"
 		}
+	}
 }
